Wed Jun 11 11:44:21 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Buffering_Constraint_Policy.cpp:
	* tao/BiDir_GIOP/BiDir_Policy_i.cpp:
	* tao/BiDir_GIOP/BiDir_Policy_i.h:
	* tao/Messaging/Connection_Timeout_Policy_i.cpp:
	* tao/Messaging/Messaging_Policy_i.cpp:
	* tao/PortableServer/Servant_Base.cpp:
	* tao/RTCORBA/RT_Policy_i.cpp: First set of fixes for gcc
	  3.3. These are all related to the order of base class
	  construction which has virtual inheritance. gcc 3.3 is
	  particularly picky about this emitting up lots of warnings. What
	  makes this particularly tricky is that gcc 3.3 is a bit
	  inconsistent emitting warnings for only copy constructors. But
	  that is besides the point.  

	  The fixes made are also for regular constructors and so they
	  should just work fine.   

Wed Jun 11 11:45:47 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils_T.cpp(set_is_multiple):

          Restored parameter names in the signature and ACE_UNUSED_ARG macros
          in the body, to eliminate BCB5 warnings.

        * orbsvcs/orbsvcs/IFRService/tmplinst.cpp:

          Added missing explicit template instantiations.

Tue Jun 10 15:15:13 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:

          We have been having an interoperability problem with JacOrb
          for the following reason: In typecode generation for aggregate
          types with repeated member types, the TAO IDL compiler generates
          a negative offset indirection for the repeats, using the same
          mechanism as for recursive types. This is allowed, but not
          mandated, by the spec. JacOrb, it seems, can handle this method
          in recursive types, but not for repeated members.

          My fix will change typecode generation so that the negative
          offset for repeated members will be used only with the